--- a/package.yaml
+++ b/package.yaml
@@ -60,6 +60,7 @@ ghc-options:
   - -Wmissing-export-lists
   - -Wmissing-home-modules
   - -Wredundant-constraints
+  - -optP-Wno-nonportable-include-path
 
 library:
   source-dirs: src/wrench
