Fix docker image execution as a server.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,6 @@
 services:
     wrench-serv:
-        image: ryukzak/wrench:preview
+        image: ryukzak/wrench:edge
         pull_policy: always
         environment:
             - PORT=8080
