Improve performance: port and instruction collision heavily use list. We replace it by simple Int intervals.

--- a/package.yaml
+++ b/package.yaml
@@ -13,6 +13,7 @@ description: Wrench - is a tool for educating computer architecture.
 
 default-extensions:
   - AllowAmbiguousTypes
+  - BangPatterns
   - ConstraintKinds
   - DataKinds
   - DeriveAnyClass
