--- a/wrench.cabal
+++ b/wrench.cabal
@@ -50,6 +50,7 @@ library
       src/wrench
   default-extensions:
       AllowAmbiguousTypes
+      BangPatterns
       ConstraintKinds
       DataKinds
       DeriveAnyClass
@@ -118,6 +119,7 @@ executable wrench
       src/wrench
   default-extensions:
       AllowAmbiguousTypes
+      BangPatterns
       ConstraintKinds
       DataKinds
       DeriveAnyClass
@@ -166,6 +168,7 @@ executable wrench-fmt
       app
   default-extensions:
       AllowAmbiguousTypes
+      BangPatterns
       ConstraintKinds
       DataKinds
       DeriveAnyClass
@@ -235,6 +238,7 @@ executable wrench-serv
       src/wrench-serv
   default-extensions:
       AllowAmbiguousTypes
+      BangPatterns
       ConstraintKinds
       DataKinds
       DeriveAnyClass
@@ -313,6 +317,7 @@ test-suite wrench-test
       test
   default-extensions:
       AllowAmbiguousTypes
+      BangPatterns
       ConstraintKinds
       DataKinds
       DeriveAnyClass
