[m68k] Add PreDec and PostInc addressing. Prototype m68k per instruction tests.

--- a/wrench.cabal
+++ b/wrench.cabal
@@ -308,6 +308,7 @@ test-suite wrench-test
   type: exitcode-stdio-1.0
   main-is: Spec.hs
   other-modules:
+      Wrench.Isa.M68k.Test
       Wrench.Isa.RiscIv.Test
       Wrench.Machine.Memory.Test
       Wrench.Machine.Types.Test
