--- a/example/risc-iv-32/huge-report.yaml
+++ b/example/risc-iv-32/huge-report.yaml
@@ -1,7 +1,7 @@
 name: assert is_prime(5) == 1
 limit: 600000
 memory_size: 0x1000
-input_streams:
+memory_mapped_io:
   0x80: [2147483647]
   0x84: []
 reports:
