--- a/test/golden/m68k/shift_commands.yaml
+++ b/test/golden/m68k/shift_commands.yaml
@@ -1,7 +1,7 @@
 name: assert lsl, lsr, asl, asr commands([5, 512, 8, 20]) == [10, 256, 16, 10]
 limit: 2000
 memory_size: 0x1000
-input_streams:
+memory_mapped_io:
   0x80: [5, 512, 8, 20]
   0x84: []
 reports:
