--- a/test/golden/risc-iv-32/sb.yaml
+++ b/test/golden/risc-iv-32/sb.yaml
@@ -1,7 +1,7 @@
 name: "risciv sb instruction"
 limit: 2000
 memory_size: 0x1000
-input_streams:
+memory_mapped_io:
   0x80: []
   0x84: []
 reports:
